working search controller and working basic best buy api call using Faraday

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -11,8 +11,7 @@
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav">
       <li><%= form_tag("/search", :method => "get") do %>
-        B
-        <%= text_field_tag :search, params[:zipcode], placeholder: "Enter Zipcode" %>
+        <%= text_field_tag :zipcode, params[:zipcode], placeholder: "Enter Zipcode" %>
         <%= submit_tag "Search", :name => nil %>
       <% end %>
       </li>
