--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Within 25 Miles of <%= %> are <%= %> Total Stores</h1>
+<h1>Within 25 Miles of <%= @zipcode %> are <%= @quantity %> Total Stores</h1>
     <% @locations.each do |location| %>
       <ul class="location">
         <li class="long_name"><%= location.long_name %></li>
