--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Within 25 Miles of <%= @presenter.quantity %> there are <%= @quantity %> Total Stores</h1>
+<h1>Within 25 Miles of <%= @presenter.zipcode %> there are <%= @presenter.quantity %> Total Stores</h1>
     <% @presenter.locations.each do |location| %>
       <ul class="store">
         <li class="long_name"><b>Location:</b> <%= location.long_name %></li>
